public interface Obstacle {
    String toString();
}
