@startuml
skinparam classAttributeIconSize 0

interface Obstacle {
    +toString(): String

}

class FlyingObstacle{
-OBSTACLE: FlyingObstacleType
}

class GroundObstacle{
  -GROUNDOBS: GroundObstacleType
}

Enum FlyingObstacleType <<enumeration>> {
     BIRD
     CLOUD
     BULLET

    +{static} getRandom(): FlyingObstacleType
}

Enum GroundObstacleType <<enumeration>> {
     SPIKE
     FENCE
     HOLE
     BOX

    +{static} getRandom(): GroundObstacleType
}

interface ObstacleFactory {

    +generateRandomObstacle(): Obstacle
}


  class RandomGroundFactory {


  -randomObstacles: Map<GroundObstacleType, GroundObstacle>

    }


FlyingObstacle --> FlyingObstacleType
GroundObstacle --> GroundObstacleType


Obstacle <|-.- FlyingObstacle

Obstacle <|-.- GroundObstacle


ObstacleFactory <|-.- RandomGroundFactory



GroundObstacle <-.- RandomGroundFactory






@enduml